--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ nav {
 
 .chart-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 2rem 0;
