--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    justify-items: center;
 }
 
 /* Card style */
