--- a/style.css
+++ b/style.css
@@ -136,3 +136,16 @@ nav {
     50% { opacity: 0.5; }
     100% { opacity: 1; }
 }
+
+/* Style for unordered lists */
+ul {
+    list-style-type: disc;
+    margin: 1.5rem;
+    padding-left: 2rem;
+}
+
+/* Style for list items */
+li {
+    margin-bottom: 0.5rem;
+    line-height: 1.5;
+}
